--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "del": "^5.1.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0"
   },
